[tool.poetry]
name = "lazygit-learning"
version = "0.1.0"
description = ""
authors = ["stariq <sannantariqa@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "lazygit_learning"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
